<resources>
    <string name="app_name">TrekkingAventura</string>
    <string-array name="Tags">
        <item>Mis excursiones</item>
        <item>Buscar excursiones</item>
        <item>Ajustes</item>
    </string-array>
    <string-array name="Add_Image_Menu">
        <item>Cámara</item>
        <item>Galería</item>
        <item>Cancelar</item>
    </string-array>
    <string name="add_menu_title">Añadir imagen</string>
    <string name="drawer_open">Abrir navigation drawer</string>
    <string name="drawer_close">Cerrar navigation drawer</string>
    <string name="add_excursion">Añadir Excursión</string>
    <string name="search_excursion">Buscar Excursión</string>
    <string name="create_excursion">Crear Excursión</string>
    <string name="edit_excursion">Editar Excursión</string>
    <string name="delete_excursion">Eliminar Excursión</string>
    <string name="share_excursion">Compartir Excursión</string>
    <string name="go_back">Atrás</string>
    <string name="cancel_excursion">Cancelar</string>
    <string name="label_excursion_name">Nombre</string>
    <string name="label_excursion_opinion">Descripción/Opinión</string>
    <string name="label_excursion_level">Nivel</string>
    <string name="label_excursion_level_low">Fácil</string>
    <string name="label_excursion_level_medium">Medio</string>
    <string name="label_excursion_level_high">Difícil</string>
    <string name="label_excursion_distance">Distancia (km)</string>
    <string name="label_excursion_location">Lugar</string>
    <string name="label_excursion_latitude">Latitud</string>
    <string name="label_excursion_longitude">Longitud</string>
    <string name="error_message">Hay errores en el formulario</string>
    <string name="error_required_name">El nombre es obligatorio</string>
    <string name="error_required_description">La descripción es obligatoria</string>
    <string name="error_required_location">El lugar es obligatorio</string>
    <string name="error_required_distance">La distancia es obligatoria</string>
    <string name="error_distance_value">La distancia no puede ser 0</string>
    <string name="error_required_level">Es obligatorio seleccionar un nivel</string>
    <string name="error_required_latitude">La latitud es obligatoria</string>
    <string name="error_required_longitude">La longitud es obligatoria</string>
    <string name="button_geolocate">Geolocalizar</string>
    <string name="button_add_image">Añadir imagen</string>
    <string name="button_find">Buscar</string>
    <string name="search_hint">Filtra por nombre...</string>
    <string name="settings_title">Ajustes</string>
    <string name="settings_category_filter">Filtrado excursiones</string>
    <string name="settings_distance">Distancia (km)</string>
    <string name="settings_distance_sumary">Introduce la distancia máxima</string>
    <string name="settings_filter">Filtro por distancia</string>
    <string name="settings_sumary_on">On</string>
    <string name="settings_sumary_off">Off</string>
    <string name="settings_notifications_category">Notificaciones</string>
    <string name="settings_notifications">Notificaciones mal tiempo</string>
    <string name="settings_notifications_excursion">Excursión</string>
    <string name="settings_notifications_excursion_sumary">Selecciona una excursión...</string>
    <string name="widget_configuration">Configuración del widget</string>
    <string name="widget_create_button">Añadir widget</string>
    <string name="widget_default_text">EXAMPLE</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
