<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_excursion_name"
        android:ems="10"
        android:layout_marginBottom="5sp" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/label_excursion_opinion"
        android:layout_marginBottom="5sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginBottom="5sp">

        <EditText
            android:id="@+id/edtLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_excursion_location"
            android:ems="10"
            android:layout_weight="0.5"/>

        <EditText
            android:id="@+id/edtDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:hint="@string/label_excursion_distance"
            android:layout_weight="0.1" />

    </LinearLayout>

    <TextView
        android:text="@string/label_excursion_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/background_dark"
        android:textAlignment="center"
        android:layout_marginBottom="5sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.2"
        android:layout_marginBottom="5sp">

        <RadioButton
            android:id="@+id/button_level_low"
            android:text="@string/label_excursion_level_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"/>

        <RadioButton
            android:id="@+id/button_level_medium"
            android:text="@string/label_excursion_level_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"/>

        <RadioButton
            android:id="@+id/button_level_high"
            android:text="@string/label_excursion_level_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"/>

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <EditText
            android:id="@+id/edtLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_excursion_latitude"
            android:layout_weight="0.5"
            android:inputType="numberSigned|numberDecimal" />

        <EditText
            android:id="@+id/edtLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_excursion_longitude"
            android:layout_weight="0.5"
            android:inputType="numberSigned|numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/button_geolocate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_geolocate"
        android:textAlignment="center"
        android:nestedScrollingEnabled="false"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:onClick="geolocate" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/txtImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="0.1"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/deleteSelectedImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:src="@drawable/ic_clear_black_24dp"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonAddImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add_image"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>